--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>Курсовая</title>
+	<title>Курсовая работа</title>
 </head>
+
 <body>
-<h1>RERE</h1>
+	<header class="header">
+		<nav class="header_menu">
+			<a href="#" class="header_menu-logo-link">
+				<img src="svg/noemi-logo.svg" alt="Logo" class="header_menu-logo">
+			</a>
+
+			<ul class="header_menu-list">
+				<li class="header_menu-list-item">
+					<a href="#" class="header_menu-link">Главная</a>
+				</li>
+				<li class="header_menu-list-item">
+					<a href="#" class="header_menu-link">Посты</a>
+				</li>
+				<li class="header_menu-list-item">
+					<a href="#" class="header_menu-link">Статьи</a>
+				</li>
+				<li class="header_menu-list-item">
+					<a href="#" class="header_menu-link">Теги</a>
+				</li>
+				<li class="header_menu-list-item">
+					<a href="#" class="header_menu-link">Темы</a>
+				</li>
+				<li class="header_menu-list-item">
+					<a href="#" class="header_menu-link">Контакты</a>
+				</li>
+			</ul>
+		</nav>
+		<picture class="header_background">
+			<img src="images/banner-bg.jpg" alt="баннер" class="header_bg_image">
+		</picture>
+
+		<h1 class="header_pagetitle">Блог о творчестве, спорте, <br>
+			и образе жизни</h1>
+
+	</header>
+
+	<main>
+
+	</main>
+
+	<footer>
+
+	</footer>
 </body>
+
 </html>
