--- a/index.html
+++ b/index.html
@@ -10,39 +10,51 @@
 
 <body>
 	<header class="header">
-		<nav class="header_menu">
-			<a href="#" class="header_menu-logo-link">
-				<img src="svg/noemi-logo.svg" alt="Logo" class="header_menu-logo">
-			</a>
+		<section class="header__panel">
+			<nav class="header__menu">
+				<a href="#" class="header__menu-logo-link">
+					<img src="svg/noemi-logo.svg" alt="Logo" class="header__menu-logo">
+				</a>
 
-			<ul class="header_menu-list">
-				<li class="header_menu-list-item">
-					<a href="#" class="header_menu-link">Главная</a>
-				</li>
-				<li class="header_menu-list-item">
-					<a href="#" class="header_menu-link">Посты</a>
-				</li>
-				<li class="header_menu-list-item">
-					<a href="#" class="header_menu-link">Статьи</a>
-				</li>
-				<li class="header_menu-list-item">
-					<a href="#" class="header_menu-link">Теги</a>
-				</li>
-				<li class="header_menu-list-item">
-					<a href="#" class="header_menu-link">Темы</a>
-				</li>
-				<li class="header_menu-list-item">
-					<a href="#" class="header_menu-link">Контакты</a>
-				</li>
-			</ul>
-		</nav>
-		<picture class="header_background">
-			<img src="images/banner-bg.jpg" alt="баннер" class="header_bg_image">
-		</picture>
+				<ul class="header__menu-list">
+					<li class="header__menu-list-item">
+						<a href="#" class="header__menu-link">Главная</a>
+					</li>
+					<li class="header__menu-list-item">
+						<a href="#" class="header__menu-link">Посты</a>
+					</li>
+					<li class="header__menu-list-item">
+						<a href="#" class="header__menu-link">Статьи</a>
+					</li>
+					<li class="header__menu-list-item">
+						<a href="#" class="header__menu-link">Теги</a>
+					</li>
+					<li class="header__menu-list-item">
+						<a href="#" class="header__menu-link">Темы</a>
+					</li>
+					<li class="header__menu-list-item">
+						<a href="#" class="header__menu-link">Контакты</a>
+					</li>
+				</ul>
+			</nav>
 
-		<h1 class="header_pagetitle">Блог о творчестве, спорте, <br>
-			и образе жизни</h1>
+			<picture class="header__background">
+				<!-- <source
+					media="(min-width:768px)"
+					srcset="images/banner-bg.jpg">
+				<source
+					media="(min-width:465px)"
+					srcset="images/banner-bg-tablet.jpg">
+				<source
+					media="(min-width:268px)"
+					srcset="images/banner-mobile.jpg"> -->
+				<img src="images/banner-bg.jpg" alt="баннер" class="header__bg_image">
+			</picture>
 
+			<h1 class="header__pagetitle">Блог о творчестве, спорте, <br>
+				и образе жизни
+			</h1>
+		</section>
 	</header>
 
 	<main>
